force-app/main/default/objects/custom_create341__c/custom_create341__c.object-meta.xml
<CustomObject>
    <label>Custom created object341</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects341</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>