force-app/main/default/objects/custom_create341__c/fields/custom_create_341field612__c.field-meta.xml
<CustomField>
    <fullName>custom_create_341field612__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 341field612</label>
    <type>Checkbox</type>
</CustomField>